--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Paper-Mono-Dark
-gtk-font-name=Fira Sans 9
+gtk-font-name=Fira Sans 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
@@ -13,3 +13,4 @@ gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=none
