--- a/i3/config
+++ b/i3/config
@@ -97,6 +97,8 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# workspace aliases
+
 # switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -110,6 +112,9 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 bindsym $mod+Tab workspace back_and_forth
 
+bindsym $mod+Left workspace prev
+bindsym $mod+Right workspace next
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
@@ -121,6 +126,8 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+
+bindsym $mod+Shift+greater workspace 2 DP1
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -164,9 +171,13 @@ bindsym $mod+r mode "resize"
 
 # App shortcuts
 bindsym $mod+c exec "chromium"
+bindsym $mod+Shift+o exec "chromium --user-data-dir=~/.config --disable-web-security"
 bindsym $mod+t exec "Thunar"
 bindsym $mod+b exec "firefox"
 bindsym $mod+o exec "code-insiders"
+
+# Toggle external monitor
+bindsym $mod+Shift+m exec --no-startup-id ~/monitor.sh163 bindsym $mod+r mode "resize"
 
 # Show albert
 bindsym $mod+m exec --no-startup-id albert show
@@ -180,12 +191,14 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5 
 
-set $Locker i3lock-fancy && sleep 1
+# set $Locker i3lock-fancy && sleep 1
+set $Locker i3lock -c 000000 --indicator --composite --blur=10
 set $mode_system (l) Lock, (e) Logout, (s) Suspend, (h) Hibernate, (r) Reboot, (Shift+s) Shutdown
 mode "$mode_system" {
+        # bindsym l exec --no-startup-id $Locker, mode "default"
         bindsym l exec --no-startup-id $Locker, mode "default"
-        bindsym e exec --no-startup-id i3-msg exit, mode "default"
-        bindsym s exec --no-startup-id systemctl suspend, mode "default"
+				bindsym e exec --no-startup-id i3-msg exit, mode "default"
+        bindsym s exec --no-startup-id systemctl suspend && $Locker, mode "default"
         bindsym h exec --no-startup-id systemctl hibernate, mode "default"
         bindsym r exec --no-startup-id systemctl reboot, mode "default"
         bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
@@ -232,17 +245,22 @@ hide_edge_borders smart
 exec --no-startup-id dunst &
 exec --no-startup-id udiskie &
 exec --no-startup-id pasystray &
-#exec --no-startup-id compton --backend-glx --glx-no-stencil
-exec --no-startup-id compton -CGb &
+exec --no-startup-id compton --backend-glx --glx-no-stencil
+#exec --no-startup-id compton -CGb &
 exec --no-startup-id nm-applet &
-#exec_always --no-startup-id xfce4-power-manager &
+exec_always --no-startup-id xfce4-power-manager &
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 exec --no-startup-id xflux -l 0.4855, -g 35.2768 &
+# exec --no-startup-id dynpaper -f ~/Pictures/Wallpapers/mojave_dynamic_{}.jpeg -e feh &
+#exec_always --no-startup-id libinput-gestures-setup autostart
 # --bg-center -fill -max -scale -tile
 # exec_always --no-startup-id feh --bg-fill ~/.config/wallpapers/spence.jpg
-exec_always --no-startup-id feh --bg-fill ~/.config/wallpapers/green-leaves.jpg
+exec_always --no-startup-id feh --bg-fill ~/.config/wallpapers/mojave.jpg
+exec --no-startup-id thunar --daemon
+exec --no-startup-id libinput-gestures-setup start
 # exec --no-startup-id /usr/lib/gnome-settings-daemon
 # exec --no-startup-id xautolock -time 10 -locker 'i3lock-fancy -f Google Sans'
+exec --no-startup-id albert
 
 client.focused #4E9C00 #4E9C00 #FFFFFF #FFFFFF
 client.focused_inactive #1B3600 #1B3600 #888888 #FFFFFF
