--- a/termite/config
+++ b/termite/config
@@ -1,52 +1,53 @@
 [colors]
-# Base16 Dracula
-# Author: Mike Barkmin (http://github.com/mikebarkmin) based on Dracula Theme (http://github.com/dracula)
+# Base16 Gruvbox dark, hard
+# Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 
-foreground          = #e9e9f4
-foreground_bold     = #f1f2f8
-cursor              = #f1f2f8
-cursor_foreground   = #282936
-background          = rgba(40, 41, 54)
+foreground          = #d5c4a1
+foreground_bold     = #ebdbb2
+cursor              = #ebdbb2
+cursor_foreground   = #1d2021
+background          = rgba(29, 32, 33)
 
 # 16 color space
 
 # Black, Gray, Silver, White
-color0  = #282936
-color8  = #4d4f68
-color7  = #e9e9f4
-color15 = #f7f7fb
+color0  = #1d2021
+color8  = #665c54
+color7  = #d5c4a1
+color15 = #fbf1c7
 
 # Red
-color1  = #ea51b2
-color9  = #ea51b2
+color1  = #fb4934
+color9  = #fb4934
 
 # Green
-color2  = #00f769
-color10 = #00f769
+color2  = #b8bb26
+color10 = #b8bb26
 
 # Yellow
-color3  = #ebff87
-color11 = #ebff87
+color3  = #fabd2f
+color11 = #fabd2f
 
 # Blue
-color4  = #62d6e8
-color12 = #62d6e8
+color4  = #83a598
+color12 = #83a598
 
 # Purple
-color5  = #b45bcf
-color13 = #b45bcf
+color5  = #d3869b
+color13 = #d3869b
 
 # Teal
-color6  = #a1efe4
-color14 = #a1efe4
+color6  = #8ec07c
+color14 = #8ec07c
 
 # Extra colors
-color16 = #b45bcf
-color17 = #00f769
-color18 = #3a3c4e
-color19 = #626483
-color20 = #62d6e8
-color21 = #f1f2f8
+color16 = #fe8019
+color17 = #d65d0e
+color18 = #3c3836
+color19 = #504945
+color20 = #bdae93
+color21 = #ebdbb2
 
 [options]
-font = Fira Mono 10
+allow-bold = true
+font = Fira Code Retina 12
